Fixed overflow scrol

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,10 +8,8 @@
 
 html, body {
   -webkit-tap-highlight-color: transparent;
-  overscroll-behavior-y: none;
   background-color: var(--main-color) !important;
   min-height: 100vh;
-  overflow: scroll;
 }
 
 .btn{
